force-app/main/default/objects/Ex_Cliente__c/Ex_Cliente__c.object-meta.xml
<CustomObject>
    <description>Objeto personalizado para almacenar información de cuentas desactivadas.</description>
    <label>Ex-Cliente</label>
    <nameField>
        <displayFormat>{YY}-{0000}</displayFormat>
        <label>Ex-Cliente Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ex-Clientes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>