force-app/main/default/objects/Ex_Cliente__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo lookup para relacionar un contacto</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ex-Clientes</relationshipLabel>
    <relationshipName>Ex_Clientes</relationshipName>
    <type>Lookup</type>
</CustomField>