force-app/main/default/objects/Ex_Cliente__c/fields/Generado_automaticamente__c.field-meta.xml
<CustomField>
    <fullName>Generado_automaticamente__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campa para indicar si el registro fue generado por automatización.</description>
    <label>Generado automáticamente</label>
    <type>Checkbox</type>
</CustomField>