force-app/main/default/objects/Ex_Cliente__c/fields/Rol__c.field-meta.xml
<CustomField>
    <fullName>Rol__c</fullName>
    <formula>TEXT(Contact__r.Rol__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rol</label>
    <type>Text</type>
</CustomField>