force-app/main/default/objects/Ex_Cliente__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Generado_automaticamente__c</columns>
    <columns>Rol__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>